--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-body {
+/*body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   background: linear-gradient(to bottom, #4facfe, #00f2fe);
   color: white;
   text-align: center;
-}
+}*/
 
 .app {
   padding: 20px;
