--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   text-align: left;
   background-color: ivory;
+  font-family: 'Press Start 2P', Arial, sans-serif;
 }
 
 .App-logo {
@@ -22,4 +23,25 @@ body {
 .head{
   display: flex;
   flex-direction: column;
+}
+
+.navbar {
+  
+  display: flex;
+  background-color: #F0E2C1;
+}
+
+.section {
+  margin-right: 0px;
+  padding:10px 10px;
+  background-color: #F0E2C1;
+  border-style:inset;
+  border-width: 5px;
+  border-color: ivory;
+  color: black;
+  text-decoration: none;
+}
+
+.section:hover {
+  border-style:double;
 }
