changes in Chat.js

--- a/src/App.css
+++ b/src/App.css
@@ -95,3 +95,11 @@ body {
   display: flex;
   flex-direction: row;
 }
+
+.message {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
