--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,8 @@ body {
 .header {
   position: fixed;
   z-index: 2;
-  background-color: aliceblue;
+  background-color: rgba(240, 248, 255,0.2);
+  backdrop-filter: blur(20px);
   width: 100%;
 
 }
