--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   /*text-align: left;*/
   background-color: black;
+  color: white;
   font-family: 'Press Start 2P', Arial, sans-serif;
 }
 
@@ -25,21 +26,56 @@ body {
   flex-direction: row;
 }
 
+.chat-input button {
+  background-color: black;
+  color: white;
+  width: 17%;
+  height: 35px;
+  border:0;
+}
+
+.chat-input button:hover {
+  background-color: white;
+  color: black;
+  cursor: pointer;
+}
+
+.chat-input input {
+  width: 80%;
+  height: 35px;
+  padding: 0px;
+  margin-right: 10px;
+  background-color: #282c34;
+  color: white;
+}
+
+.chat-input input:hover {
+  background-color: white;
+}
+
 .contact {
   display: flex;
   flex-direction:column;
-  flex: 1 1 150px;
-  max-width: 100%;
   min-width: 100px;
   min-height: 350px;
   margin-top: 20px;
+}
+
+.end-note {
+  width:100%;
+  height:15px;
+  position: fixed;
+  bottom: 0px;
+  background-color: aquamarine;
+  color: black;
+  text-align: center
 }
 
 .general_chat {
   flex: 1 1 400px;
   max-width: 100%;
   min-width: 300px;
-  min-height: 350px;
+  min-height: 250px;
   border-width: 5px;
   border-color: black;
   border-style:ridge;
@@ -53,11 +89,53 @@ body {
 
 .header {
   position: fixed;
+  display: flex;
+  justify-content: space-between;
+  top: 0px;
   z-index: 2;
-  background-color: rgba(240, 248, 255,0.2);
-  backdrop-filter: blur(20px);
+  background-color: rgba(0,0,0,0.3);
+  color: azure;
+  backdrop-filter: blur(10px);
   width: 100%;
+}
 
+.header a {
+  font-size: larger;
+  text-decoration: none;
+  margin-right: 10px;
+  padding: 25px 25px;
+  border-radius: 5px;
+  color: white;
+}
+
+.header h2{
+  align-self: center;
+  margin-left: 10px;
+}
+
+.header a:hover {
+  background-color: white;
+  color: #000;
+}
+
+.home {
+  margin-top: 70px;
+}
+
+.logout-button {
+  border-radius: 10px;
+  border: 0;
+  height: 50px;
+  width: 100%;
+  background-color: aliceblue;
+  color: #000;
+  align-self: center;
+}
+
+.logout-button:hover {
+  cursor: pointer;
+  background-color: red;
+  color: white;
 }
 
 .homepage_distribution {
@@ -94,10 +172,20 @@ body {
   font-size: larger;
 }
 
+.login button:hover {
+  cursor: pointer;
+}
+
+.login-to-continue {
+  display: flex;
+  translate: 0px 100px;
+}
+
 .message {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 .navbar {
@@ -119,6 +207,47 @@ body {
 .register {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+  margin-top: 50px;
+}
+
+.register button {
+  width:20%;
+  height: 30px;
+  border-radius: 5px;
+
+}
+
+.register button:hover {
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  border: 0;
+  border-radius: 5px;
+}
+
+.register form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}  
+
+.register form input {
+  height: 30px;
+  width:70%;
+  margin: 10px;
+  background-color: #000;
+  color: white;
+}
+
+.register form input:hover {
+  translate: 5px -5px;
+}
+
+.register h2 {
+  margin-top: -50px;
+  text-align: center;
 }
 
 .section {
@@ -136,6 +265,9 @@ body {
   border-style:double;
 }
 
+.timestamp {
+  
+}
 
 
 
