--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,13 @@ body {
   flex-direction: row;
 }
 
+.chat-box {
+  border: 1px solid #ccc;
+  padding: 10px;
+  height: 325px;
+  overflow-y: scroll;
+}
+
 .chat-input button {
   background-color: black;
   color: white;
@@ -63,16 +70,17 @@ body {
 
 .end-note {
   width:100%;
-  height:15px;
+  padding:1px;
   position: fixed;
   bottom: 0px;
+  z-index: 0;
   background-color: aquamarine;
   color: black;
-  text-align: center
+  text-align: center;
 }
 
 .general_chat {
-  flex: 1 1 400px;
+  flex: 1 1 200px;
   max-width: 100%;
   min-width: 300px;
   min-height: 250px;
@@ -130,6 +138,7 @@ body {
   background-color: aliceblue;
   color: #000;
   align-self: center;
+  margin-bottom: 25px;
 }
 
 .logout-button:hover {
@@ -144,7 +153,7 @@ body {
 }
 
 .login {
-  translate: 0 100px;
+  margin-top: 0px;
   background-color: black;
   width: 100vw;
   height: 100vh;
@@ -153,15 +162,6 @@ body {
   flex-direction:column;
   justify-content:center;
   align-items:center;
-}
-
-.login input {
-  height: 20px;
-  display: block;
-  margin-bottom: 10px;
-  border-color: aliceblue;
-  background-color: #282c34;
-  color: white;
 }
 
 .login button {
@@ -174,6 +174,25 @@ body {
 
 .login button:hover {
   cursor: pointer;
+}
+
+.login input {
+  height: 20px;
+  display: block;
+  margin-bottom: 10px;
+  border-color: aliceblue;
+  background-color: #282c34;
+  color: white;
+}
+
+.login a {
+  color: white;
+}
+
+.login a:hover {
+  color:#000;
+  background-color: white;
+  padding: 2px;
 }
 
 .login-to-continue {
@@ -189,7 +208,6 @@ body {
 }
 
 .navbar {
-  
   display: flex;
   background-color: #F0E2C1;
 }
