started building private messaging

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
 
 body {
   /*text-align: left;*/
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   font-family: "Nunito", Arial, sans-serif;
 }
 
@@ -20,7 +20,7 @@ body {
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .bottom {
@@ -33,19 +33,24 @@ body {
   padding: 10px;
   height: 325px;
   overflow-y: scroll;
+  font-size:small;
+}
+
+.chat-box::-webkit-scrollbar {
+  width: 5px; /* Adjust the width */
 }
 
 .chat-input button {
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   width: 17%;
   height: 35px;
   border:0;
 }
 
 .chat-input button:hover {
-  background-color: white;
-  color: black;
+  background-color: black;
+  color: white;
   cursor: pointer;
 }
 
@@ -55,12 +60,12 @@ body {
   padding: 0px;
   margin-right: 10px;
   background-color: #282c34;
-  color: white;
+  color: black;
 }
 
 .chat-input input:hover {
-  background-color: white;
-  color:#000;
+  background-color: black;
+  color:white;
 }
 
 .contact {
@@ -88,7 +93,7 @@ body {
   min-width: 300px;
   min-height: 250px;
   border-width: 5px;
-  border-color: black;
+  border-color: white;
   border-style:ridge;
 }
 
@@ -104,8 +109,8 @@ body {
   justify-content: space-between;
   top: 0px;
   z-index: 2;
-  background-color: rgba(0,0,0,0.3);
-  color: azure;
+  background-color: transparent;
+  color: black;
   backdrop-filter: blur(10px);
   width: 100%;
 }
@@ -113,20 +118,20 @@ body {
 .header a {
   font-size: larger;
   text-decoration: none;
-  margin-right: 10px;
-  padding: 25px 25px;
+  padding: 5px;
+  margin: 20px 35px;
   border-radius: 5px;
+  color: black;
+}
+
+.header a:hover {
+  background-color: black;
   color: white;
 }
 
 .header h2{
   align-self: center;
   margin-left: 10px;
-}
-
-.header a:hover {
-  background-color: white;
-  color: #000;
 }
 
 .home {
@@ -157,10 +162,10 @@ body {
 
 .login {
   margin-top: 0px;
-  background-color: black;
+  background-color: white;
   width: 100vw;
   height: 100vh;
-  color: white;
+  color: black;
   display: flex;
   flex-direction:column;
   justify-content:center;
@@ -185,16 +190,16 @@ body {
   margin-bottom: 10px;
   border-color: aliceblue;
   background-color: #282c34;
-  color: white;
+  color: black;
 }
 
 .login a {
-  color: white;
+  color: black;
 }
 
 .login a:hover {
-  color:#000;
-  background-color: white;
+  color:white;
+  background-color: black;
   padding: 2px;
 }
 
@@ -207,7 +212,12 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items:baseline;
+}
+
+.message p {
+  width: 150px;
+  text-align: right;
 }
 
 .navbar {
@@ -221,7 +231,7 @@ body {
   min-width: 300px;
   min-height: 350px;
   border-width: 5px;
-  border-color: black;
+  border-color: white;
   border-style:ridge;
 }
 
@@ -242,7 +252,7 @@ body {
 
 .register button:hover {
   background-color: red;
-  color: white;
+  color: black;
   cursor: pointer;
   border: 0;
   border-radius: 5px;
@@ -259,7 +269,7 @@ body {
   width:70%;
   margin: 10px;
   background-color: #000;
-  color: white;
+  color: black;
 }
 
 .register form input:hover {
@@ -278,7 +288,7 @@ body {
   border-style:inset;
   border-width: 5px;
   border-color: ivory;
-  color: black;
+  color: white;
   text-decoration: none;
 }
 
