--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline:opsz,wght@10..72,100..900&family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=DM+Serif+Text:ital@0;1&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Quantico:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Slab:wght@100..900&display=swap');
 
+@media (max-width: 920px) {
+  .left {
+      max-width: 200px;
+  }
+
+}
+
 body {
   /*text-align: left;*/
   background-color: white;
@@ -36,9 +43,7 @@ body {
   font-size:small;
 }
 
-.chat-box::-webkit-scrollbar {
-  width: 5px; /* Adjust the width */
-}
+
 
 .chat-input button {
   background-color: white;
@@ -76,6 +81,12 @@ body {
   margin-top: 20px;
 }
 
+.empty-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .end-note {
   width:100%;
   padding:1px;
@@ -88,8 +99,8 @@ body {
 }
 
 .friends-list {
-  width: 320px;
-  overflow-y: scroll;
+  overflow-y: auto;
+  flex-grow: 1;
 }
 
 .friends-list-heading {
@@ -105,6 +116,7 @@ body {
 
 .general_chat {
   margin-right: 10px;
+  min-width: auto;
   min-height: 250px;
   border-width: 5px;
   border-color: white;
@@ -125,7 +137,7 @@ body {
   z-index: 2;
   background-color: transparent;
   color: black;
-  backdrop-filter: blur(10px);
+  /*backdrop-filter: blur(10px);*/
   width: 100%;
 }
 
@@ -155,16 +167,14 @@ body {
 
 .homepage_distribution {
   display: flex;
-  justify-content: stretch;
 }
 
 .left {
-  flex: 0;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
 }
 
-.right {
-  flex: 1;
-}
 
 .logout-button {
   border-radius: 10px;
@@ -175,6 +185,21 @@ body {
   color: #000;
   align-self: center;
   margin-bottom: 25px;
+}
+
+.logout-buttons {
+  border-radius: 10px;
+  border: 0;
+  height: 40px;
+  width: 100px;
+  background-color: red;
+  color: black;
+  align-self: center;
+}
+
+.logout-buttons:hover {
+  cursor: pointer;
+  color: white;
 }
 
 .logout-button:hover {
@@ -305,8 +330,6 @@ body {
 }
 
 .requests-list {
-  width: 300px;
-  height:
 }
 
 .requests-list-heading {
@@ -318,6 +341,10 @@ body {
 .requests-list-heading button {
   height: fit-content;
   margin-right: 20px;
+}
+
+.right {
+  flex: 1;
 }
 
 .section {
@@ -333,6 +360,10 @@ body {
 
 .section:hover {
   border-style:double;
+}
+
+.space-block {
+  width: 50%;
 }
 
 .timestamp {
