--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,6 @@ body {
 .empty-message {
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .end-note {
@@ -99,7 +98,7 @@ body {
 }
 
 .friends-list {
-  overflow-y: auto;
+  overflow-y: scroll;
   flex-grow: 1;
 }
 
